Update visual para usar colores del inase y su logo, arregle bugs de filtrado de reportes y ahora se pueden ver opciones de codigo de muestra al crear un resultado. Se puede ordenar por cualquier columna en la view de reporte.

--- a/webroot/css/home.css
+++ b/webroot/css/home.css
@@ -7,7 +7,7 @@
 .main-title-header {
     text-align: center;
     padding: 50px 30px;
-    background: linear-gradient(135deg, #0ea5e9 0%, #2dd4bf 100%);
+    background: linear-gradient(135deg, #ac278d 0%, #d966b8 100%);
     color: white;
     border-radius: var(--radius-lg);
     margin-bottom: 40px;
